# py-res-changer

./: .gitignore  LICENSE  ResChange.py  main.spec  pyproject.toml  readme.md
go/: displayconfig.c  go.mod  go.sum  main.go  rsrc_windows_amd64.syso
python/: readme.md  resoultion_changer.spec
python/src/: res_change.py
src/: clone_extend_monitors.py  dpi_change.py  main.py  res_change.py  toggle_listen.py  wire.py
