[tool.poetry]
name = "reschanger"
version = "1.0"
description = "Change resolution with use of system tray"
authors = ["scrabwind <scrabwind@gmail.com>"]
readme = "README.md"
repository = "https://github.com/scrabwind/py-res-changer"

[tool.poetry.dependencies]
python = "3.10.11"
pywin32 = "^306"
pystray = "^0.19.4"
numpy = "^1.23.3"
PyAutoGUI = "^0.9.53"
pyinstaller = "^5.6.2"
sounddevice = "^0.4.5"
pywinauto = "^0.6.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
